# ToolArena

./: .cursorignore  .dockerignore  .gitignore  .repomixignore  CONTRIBUTING.md  README.md  papers.bib  papers.yaml  push_docker.sh  pyproject.toml  repomix-output.xml  run_tool.ipynb  scratch.ipynb
.github/actions/: docker.yml
.github/workflows/: build.yml  ci.yml  docker.yml
.legacy/: README.md  papers.bib
.legacy/data/: .gitignore  (+1 more)
data/: README.md  download.sh  download_aspera.sh  tabpfn.py
docker/: function_runner.py  runtime.Dockerfile  subprocess_utils.py  tool.Dockerfile
notebooks/: load_data.ipynb  run_tool.ipynb
papers/: chen2024uni.txt  elnahhas2024stamp.txt  isensee2020nnunet.txt  warner2024modernbert.txt  xiang2025musk.txt  zhou2023retfound.txt
scripts/: update_huggingface_dataset.py
tasks/: .gitignore  conch_extract_features.yaml  conftest.py  esm_fold_predict.yaml  medsss_generate.yaml  modernbert_predict_masked.yaml  nnunet_train_model.yaml  papers.bib  papers.yaml  pytest.ini  retfound_feature_vector.yaml  stamp_extract_features.yaml  tabpfn_predict.yaml  utils.py
tests/: __init__.py  conftest.py  pytest.ini  test_medsam_inference.py  test_medsss_generate.py  test_modernbert_predict_masked.py  test_musk_extract_features.py  test_pathfinder_verify_biomarker.py  test_retfound_feature_vector.py  test_stamp_extract_features.py  test_subprocess_utils.py  test_uni_extract_features.py  test_utils.py  utils.py
toolarena/: __init__.py  __main__.py  cli.py  dataset.py  definition.py  run.py  runtime.py  server.py  types.py  utils.py
(+270 files in other folders)
